# CustomQuickchat

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CustomQuickchat.sln  README.md  init-submodules.bat  install.bat  requirements.txt  speech-to-text-server.pyw  speechToText-websockets.pyw  speechToText.pyw  vcpkg.json
.github/workflows/: build.yml  windows-build.yml
CustomQuickchat/: BakkesMod.props  Commands.cpp  CustomQuickchat.cpp  CustomQuickchat.h  CustomQuickchat.vcxproj  CustomQuickchat.vcxproj.filters  CvarChangeCallbacks.cpp  CvarNames.hpp  Cvars.hpp  Events.cpp  Events.hpp  Functions.cpp  GuiBase.cpp  GuiTools.cpp  GuiTools.hpp  Keys.h  Macros.hpp  RegisterCvars.cpp  Settings.cpp  SpeechToText.cpp  Structs.cpp  Structs.hpp  TextEffects.cpp  TextEffects.h  Utils.cpp  Utils.hpp  logging.h  nlohmann.hpp  pch.h  vcpkg.json  version.h
CustomQuickchat/Components/: Includes.hpp
CustomQuickchat/Components/Components/: Instances.cpp  Instances.hpp  LobbyInfo.cpp  LobbyInfo.hpp  Utils.cpp  Utils.hpp  WebsocketManager.cpp  WebsocketManager.hpp
CustomQuickchat/IMGUI/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_win32.cpp  imgui_internal.h  imgui_rangeslider.cpp  imgui_rangeslider.h  imgui_searchablecombo.cpp  imgui_searchablecombo.h  imgui_stdlib.cpp  imgui_widgets.cpp  imguivariouscontrols.cpp  imguivariouscontrols.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
CustomQuickchat/RLSDK/: GameDefines.cpp  GameDefines.hpp  SdkHeaders.hpp
docs/: Settings.md
scripts/: init-submodules.bat  install.bat  toggle-macro.ps1
speech_to_text_server/: requirements.txt  speech-to-text-server.pyw
src/: Bindings.cpp  Bindings.hpp  Commands.cpp  CustomQuickchat.cpp  CustomQuickchat.hpp  CustomQuickchat.rc  CvarChangeCallbacks.cpp  Cvars.hpp  Events.cpp  Events.hpp  Functions.cpp  GuiBase.h  HelperFuncs.cpp  HookManager.hpp  Hooks.cpp  Keys.hpp  Macros.hpp  MiscFunctions.cpp  PluginConfig.hpp  SettingsGUI.cpp  SpeechToText.cpp  Structs.cpp  Structs.hpp  TextEffects.cpp  TextEffects.hpp  logging.h  pch.h  version.h
src/boilerplate/: CustomQuickchat.rc  GuiBase.cpp  GuiBase.hpp  PluginHelperBase.cpp  PluginHelperBase.hpp
src/components/: Component.hpp  Instances.cpp  Instances.hpp  LobbyInfo.cpp  LobbyInfo.hpp  SpeechToText.cpp  SpeechToText.hpp  WebsocketClient.cpp  WebsocketClient.hpp  WebsocketConnection.cpp  WebsocketConnection.hpp  WebsocketManager.cpp  WebsocketManager.hpp
src/util/: CustomFormatters.hpp  HookManager.cpp  HookManager.hpp  Instances.cpp  Instances.hpp  Logging.hpp  Macros.hpp
